Bug 531371.  Correctly propagate the backround from a <body style="display: table"> to the viewport as needed.  r=bzbarsky