layout/base/nsCSSRendering.cpp
@@ -912,7 +912,7 @@ nsCSSRendering::IsCanvasFrame(nsIFrame* aFrame)
 }
 
 nsIFrame*
-nsCSSRendering::FindRootFrame(nsIFrame* aForFrame)
+nsCSSRendering::FindBackgroundStyleFrame(nsIFrame* aForFrame)
 {
   const nsStyleBackground* result = aForFrame->GetStyleBackground();
 
@@ -940,7 +940,7 @@ nsCSSRendering::FindRootFrame(nsIFrame* aForFrame)
           nsIFrame *bodyFrame = aForFrame->PresContext()->GetPresShell()->
             GetPrimaryFrameFor(bodyContent);
           if (bodyFrame) {
-            return bodyFrame;
+            return nsLayoutUtils::GetStyleFrame(bodyFrame);
           }
         }
       }
@@ -980,7 +980,7 @@ nsCSSRendering::FindRootFrame(nsIFrame* aForFrame)
 const nsStyleBackground*
 nsCSSRendering::FindRootFrameBackground(nsIFrame* aForFrame)
 {
-  return FindRootFrame(aForFrame)->GetStyleBackground();
+  return FindBackgroundStyleFrame(aForFrame)->GetStyleBackground();
 }
 
 inline PRBool
